--- a/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
@@ -672,7 +672,7 @@
                         <div class="form-group kt-form__group row" *ngIf="dataFetched==true && dataFound">
 
                             <div class="col-lg-12">
-                                <h3>Disbursements / Recoveries</h3>
+                                <h3 class="heading">Disbursements / Recoveries</h3>
                                 <div class="table-responsive">
                                     <table class="table table-striped"
                                            *ngIf="dynamicList.GetDisbursementsRecoveries.length>0">
@@ -743,7 +743,7 @@
                                 <h3 *ngIf="dynamicList.GetDisbursementsRecoveries.length==0">Data not found.</h3>
                             </div>
 
-                            <div class="col-lg-12" *ngIf="recoveryDataFetched">
+                            <div class="col-lg-12 my-2" *ngIf="recoveryDataFetched">
                                 <mat-tab-group mat-align-tabs="start">
                                     <mat-tab label="Installments Detail">
                                         <div class="table-responsive">
@@ -815,8 +815,8 @@
                                             </tr>
                                             </tbody>
                                         </table>
-                                        <h3 *ngIf="recoveryList.GetAllDisbursementRecoveries.length==0">Data not
-                                            found.</h3>
+                                        <p *ngIf="recoveryList.GetAllDisbursementRecoveries.length==0">Data not
+                                            found.</p>
                                     </mat-tab>
                                     <mat-tab label="J.V Transactions">
                                         <table class="table table-striped table-bordered"
