--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,9 +16,15 @@ $MaterialIcons_FontPath: "~material-icons-font/fonts";
 body {
     font-family: 'Poppins', sans-serif !important;
 }
+.mat-tab-group .mat-tab-header .mat-tab-label-container .mat-tab-list .mat-tab-labels .mat-tab-label.mat-tab-label-active {
+    --tw-bg-opacity: 1 !important;
+    background-color: #01671B !important;
+    color: white !important;
+}
 
-
-
+body.light .mat-tab-label, body.light .mat-tab-link, body .light .mat-tab-label, body .light .mat-tab-link {
+    color: #01671B !important;
+}
 .trend-dialog {
     overflow-y: hidden;
 
