--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -34,7 +34,7 @@
                       id="llcInquiryText" routerLink="search-loan-case-by-cnic">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/id-card.png" class="img-responsive center-block w-12 mx-auto mb-3">
-                    
+
                     <p class=" text-black">Search
                         Loan Cases by CNIC</p>
                 </div>
@@ -343,6 +343,21 @@
 
                     <p class=" text-black"
                     >Loan Move</p>
+                </div></mat-card>
+        </div>
+
+    </div>
+
+    <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="statementOfAffairs()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
+
+
+                    <p class=" text-black"
+                    >Statement of Affairs Report</p>
                 </div></mat-card>
         </div>
 
