--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -3,9 +3,9 @@
     <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
          style="background-color: #f6fcf8;">Set Target
     </div>
-    <div class="py-4" [formGroup]="customerForm">
-
+    <div class="py-4" [formGroup]="targetForm">
         <div class="row">
+
             <div class="col-lg-4 col-sm-12">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label>Select Duration</mat-label>
