--- a/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
+++ b/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
@@ -24,11 +24,7 @@
                 <div class="kt-portlet__body">
                     <div class="row">
                         <div class="flex pl-2 pt-1" style="flex-wrap: wrap;">
-                            <kt-alert *ngIf="hasFormErrors" type="warn" [duration]="30000"
-                                      [showCloseButton]="true"
-                                      (close)="onAlertClose($event)">
-                                Please enter valid Input
-                            </kt-alert>
+
                             <app-zone-branch-circle [form]="RecoveryForm" [should_show_circle]="false"
                                                     (branchZoneCircleData)="getAllData($event)"
                                                     [should_filter]="false"></app-zone-branch-circle>
@@ -282,7 +278,7 @@
                                     <input matInput placeholder="MCO Book" formControlName="BookNo"
                                            maxlength="10"
                                            autocomplete="off"
-                                           appNumberOnly [readonly]="recoverySaved || viewOnly"
+                                           appNumberOnly [readonly]="recoverySaved || viewOnly || !recoveryThrough"
                                            attr.required=false/>
                                     <mat-error *ngIf="hasError('BookNo', 'required')">Book No
                                         <strong>required</strong></mat-error>
@@ -296,7 +292,8 @@
                                     <input matInput placeholder="Receipt No" formControlName="ReceiptNo"
                                            maxlength="10"
                                            autocomplete="off" appNumberOnly
-                                           [readonly]="recoverySaved || viewOnly"/>
+                                           [readonly]="recoverySaved || viewOnly || !recoveryThrough"
+                                    />
                                     <mat-error *ngIf="hasError('ReceiptNo', 'required')">Receipt No
                                         <strong>required</strong>
                                     </mat-error>
@@ -509,7 +506,7 @@
                 <button style="background-color: #01671B;" *ngIf="isSimpleRecovery" mat-raised-button
                         color="primary"
                         (click)="save()"
-                        [disabled]="submitted || viewOnly || ibDisSave">
+                        [disabled]="submitted || transactionEdit || viewOnly || dataSaved">
                     <mat-icon class="mr-2">save</mat-icon>
                     Save
                 </button>
