--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -168,7 +168,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >Daily Voucher Printing</p>
+                    >Daily Voucher Proof Listing</p>
                 </div>
             </mat-card>
         </div>
