--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -59,3 +59,8 @@
   .mat-tab-body-wrapper{
     height: 100% !important;
   }
+  foreignObject{
+  .apexcharts-legend{
+    overflow: hidden;
+  }
+}
