--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -36,7 +36,7 @@
           <div  class="row  justify-content-md-center">
            
               <div class="col-lg-6 table-responsive">
-                <p class="heading">Recovery</p>
+                <p class="heading mb-2 text-lg">Recovery</p>
             <table class="table  table-striped">
               
                 <thead>
@@ -66,7 +66,7 @@
               </table>
           </div>     
           <div class="col-lg-6 table-responsive">
-            <p class="heading">Circle Wise within Allocated Branches</p>
+            <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
             <table class="table  table-striped">
             
               <thead>
