--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -77,7 +77,7 @@
           </div>
             <div class="row">
               <div class="col-lg-6 table-responsive">
-                <p class="heading">Disbursements</p>
+                <p class="heading mb-2 text-lg">Disbursements</p>
                 <table class="table table-striped">
           
                   <thead>
@@ -107,7 +107,7 @@
                 </table> 
               </div>
               <div class="col-lg-6 table-responsive">
-                <p class="heading">Recovery</p>
+                <p class="heading mb-2 text-lg">Recovery</p>
                       <table class="table table-striped">
                         <thead>
                           <tr class="table-header-background">
@@ -139,7 +139,7 @@
 
                 <div class="row">
                 <div  class="col-lg-12 table-responsive">
-                  <p class="heading">Circle Wise within Allocated Branches</p>
+                  <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
                     <table class="table table-striped">
                         
                         <thead>
