--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -71,9 +71,9 @@
               </div>
           </div>
           </div>
-          <div class="row">          
+          <div class="row mb-2">          
             <div  class="col-lg-12 table-responsive">
-              <p class="heading">
+              <p class="heading mb-2 text-lg">
                 Disbursements
               </p>
             <table class="table  table-striped">
