--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -648,6 +648,12 @@ img {
         .col-lg-4{
             padding:0 12px;
         }
+        .col-lg-6{
+            padding:0 12px;
+        }
+        .col-lg-2{
+            padding:0 12px;
+        }
     }
 
     // #collapseExample {
