--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -626,11 +626,11 @@
                     <!--<button type="button" class="button-red pull-left" mat-raised-button cdkFocusInitial>
                       Cancel
                     </button>-->
-                    <button type="button" class="btn btn-primary" mat-raised-button color="warn"
+                    <button type="button" mat-raised-button type="button" class="btn btn-primary" mat-raised-button 
                             (click)="submitDocuments()">
                         Submit Documents
                     </button>
-                    <button type="button" class="btn btn-primary bg-green" mat-raised-button color="primary"
+                    <button type="button" class="btn btn-primary bg-green ml-2 " mat-raised-button color="primary"
                             (click)="onSubmit(false)" [disabled]="viewLoading || submitted">
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
