--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -37,11 +37,11 @@
                         </div>
 
                     </div>
-                    <div class="form-group kt-form__group row mb-3">
+                    <div class="flex" style="flex-wrap: wrap;">
                         <app-zone-branch-circle [should_show_circle]="false" [should_filter]="false" [form]="roleForm"
                                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-                            <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
+                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
+                                 <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">CNIC <strong class="matMandatory">*</strong>
                                 </mat-label>
                                 <input on-focusout="cnicfocusout()" matInput placeholder="Enter CNIC"
@@ -52,11 +52,10 @@
                                 </mat-error>
                                 <mat-error *ngIf="hasError('Cnic', 'pattern')"><strong>{{errors.cnic}}</strong>
                                 </mat-error>
-                                <mat-hint align="left">Please enter CNIC</mat-hint>
                             </mat-form-field>
                         </div>
 
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Select Gender <strong class="matMandatory">*</strong>
                                 </mat-label>
@@ -68,11 +67,7 @@
                                 </mat-select>
                             </mat-form-field>
                         </div>
-                    </div>
-
-                    <div class="form-group kt-form__group row mb-3">
-
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
                             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                                 <!--<mat-label>Select Marital Status</mat-label>-->
                                 <mat-label class="customMatLabel">Select Marital Status</mat-label>
@@ -84,7 +79,7 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
 
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Enter Customer Name <strong
@@ -94,10 +89,9 @@
                                        formControlName="CustomerName" maxlength="50" autocomplete="off" readonly/>
                                 <mat-error *ngIf="hasError('CustomerName', 'required')">Name <strong>required</strong>
                                 </mat-error>
-                                <mat-hint align="left">Please enter Name</mat-hint>
                             </mat-form-field>
                         </div>
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Enter Father Name <strong
                                     class="matMandatory">*</strong></mat-label>
@@ -108,11 +102,10 @@
                                        readonly/>
                                 <mat-error *ngIf="hasError('FatherName', 'required')">Father Name
                                     <strong>required</strong></mat-error>
-                                <mat-hint align="left">Please enter Father Name</mat-hint>
                             </mat-form-field>
                         </div>
 
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Enter Father / Husband CNIC</mat-label>
                                 <input matInput placeholder="Enter Father / Husband CNIC"
@@ -122,11 +115,7 @@
                                 <mat-hint align="left">Please Enter Father/Husband CNIC </mat-hint> -->
                             </mat-form-field>
                         </div>
-
-                    </div>
-
-                    <div class="form-group kt-form__group row mb-3">
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile" *ngIf="HusbandNameShow">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;" *ngIf="HusbandNameShow">       
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Enter Husband Name <strong
                                     class="matMandatory">*</strong></mat-label>
@@ -134,11 +123,10 @@
                                        maxlength="50" autocomplete="off" appAlphabetOnly/>
                                 <mat-error *ngIf="hasError('HusbandName', 'required')">Husband Name
                                     <strong>required</strong></mat-error>
-                                <mat-hint align="left">Please enter Husband Name</mat-hint>
                             </mat-form-field>
                         </div>
 
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <!--<mat-label>Select DOB</mat-label>--> <!---->
                                 <mat-label class="customMatLabel">Select Date of Birth <strong
@@ -152,7 +140,7 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
 
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <!--<mat-label>CNIC Issue Date</mat-label>-->
@@ -171,7 +159,7 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="col-lg-3 kt-margin-bottom-20-mobile">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <!-- <mat-label>Select CNIC Expiry</mat-label>-->
                                 <mat-label class="customMatLabel">Enter CNIC Expiry Date <strong
@@ -190,6 +178,7 @@
                         </div>
 
                     </div>
+
 
                     <div class="form-group kt-form__group row">
                         <div class="col-lg-12 kt-margin-bottom-20-mobile">
@@ -211,7 +200,6 @@
                                        maxlength="30" autocomplete="off" appAlphabetOnly readonly/>
                                 <mat-error *ngIf="hasError('MotherName', 'required')">Mother Name
                                     <strong>required</strong></mat-error>
-                                <mat-hint align="left">Please enter Mother Name</mat-hint>
                             </mat-form-field>
                         </div>
 
@@ -224,8 +212,6 @@
                                        appAlphabetOnly/>
                                 <mat-error *ngIf="hasError('MarkOfIdentification', 'required')">Mark of Identification
                                     <strong>required</strong></mat-error>
-                                <mat-hint align="left">Please enter Mark of Identification
-                                </mat-hint>
                             </mat-form-field>
                         </div>
                         <div class="col-lg-3 kt-margin-bottom-20-mobile">
@@ -240,7 +226,6 @@
                                 </mat-error>
                                 <mat-error *ngIf="hasError('Ntn', 'sequentialError')">
                                     <strong>{{errors.sequential}}</strong></mat-error>
-                                <mat-hint align="left">Please enter Ntn No</mat-hint>
                             </mat-form-field>
                         </div>
                         <div class="col-lg-3 kt-margin-bottom-20-mobile">
@@ -626,15 +611,16 @@
                     <!--<button type="button" class="button-red pull-left" mat-raised-button cdkFocusInitial>
                       Cancel
                     </button>-->
-                    <button type="button" mat-raised-button type="button" class="btn btn-primary" mat-raised-button 
-                            (click)="submitDocuments()">
-                        Submit Documents
-                    </button>
                     <button type="button" class="btn btn-primary bg-green ml-2 " mat-raised-button color="primary"
-                            (click)="onSubmit(false)" [disabled]="viewLoading || submitted">
+                    (click)="onSubmit(false)" [disabled]="viewLoading || submitted">
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
+                    <button type="button" mat-raised-button type="button" class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500 text-white" mat-raised-button 
+                            (click)="submitDocuments()">
+                            <mat-icon class="mr-2">check_circle</mat-icon>Submit Documents
+                    </button>
+
                     &nbsp;
                     <button type="button" class="btn btn-primary" mat-raised-button color="primary"
                             (click)="onSubmit(true)" [disabled]="viewLoading || submitted">
