--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -611,12 +611,12 @@
                     <!--<button type="button" class="button-red pull-left" mat-raised-button cdkFocusInitial>
                       Cancel
                     </button>-->
-                    <button type="button" class="btn btn-primary bg-green ml-2 " mat-raised-button color="primary"
+                    <button type="button" class="btn btn-primary bg-green  " mat-raised-button color="primary"
                     (click)="onSubmit(false)" [disabled]="viewLoading || submitted">
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
-                    <button type="button" mat-raised-button type="button" class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500 text-white" mat-raised-button 
+                    <button type="button" mat-raised-button type="button" class="ml-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500 text-white" mat-raised-button 
                             (click)="submitDocuments()">
                             <mat-icon class="mr-2">check_circle</mat-icon>Submit Documents
                     </button>
