--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -616,7 +616,7 @@
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
-                    <button type="button" mat-raised-button type="button" class="ml-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500 text-white" mat-raised-button 
+                    <button type="button" mat-raised-button type="button" class="mx-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500 text-white" mat-raised-button 
                             (click)="submitDocuments()">
                             <mat-icon class="mr-2">check_circle</mat-icon>Submit Documents
                     </button>
