--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -35,8 +35,8 @@
       <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
           <div  class="col-lg-4">
-            <div id="chart">
-                <apx-chart
+            <div id="chart" class=" mt-0 py-3 shadow-sm border">
+              <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
                   [labels]="chartOptions.labels"
@@ -47,8 +47,8 @@
               </div>
           </div>
           <div  class="col-lg-4">
-            <div id="chart">
-                <apx-chart
+            <div id="chart" class=" mt-0 py-3 shadow-sm border">
+              <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
                   [labels]="chartOptions.labels"
@@ -59,8 +59,8 @@
               </div>
           </div>
           <div  class="col-lg-4">
-            <div id="chart">
-                <apx-chart
+            <div id="chart" class=" mt-0 py-3 shadow-sm border">
+              <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
                   [labels]="chartOptions.labels"
