--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -8,7 +8,7 @@
       <div class="row">
           <div  class="col-lg-4">
             <p class="text-green px-2 py-2 font-bold mb-0 mt-2">Performance Indicators</p>
-            <div id="chart" class="mt-0">
+            <div id="chart" class=" mt-0 py-3 shadow-sm border">
                 <apx-chart
                   [series]="chartOptions1.series"
                   [chart]="chartOptions1.chart"
@@ -20,7 +20,7 @@
           </div>
           <div  class="col-lg-4">
             <p class="text-green px-2 py-2 font-bold mb-0 mt-2">Circle Bench Mark</p>
-            <div id="chart" class="mt-0">
+            <div id="chart" class=" mt-0 py-3 shadow-sm border">
                 <apx-chart
                   [series]="chartOptions2.series"
                   [chart]="chartOptions2.chart"
@@ -32,7 +32,7 @@
           </div>
           <div  class="col-lg-4">
             <p class="text-green px-2 py-2 font-bold mb-0 mt-2">Loan Portfolio</p>
-            <div id="chart"  class="mt-0">
+            <div id="chart"  class="mt-0 py-3 shadow-sm border">
                 <apx-chart
                   [series]="chartOptions3.series"
                   [chart]="chartOptions3.chart"
