--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -8,9 +8,9 @@
       <!-- Products list -->
       <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
-          <div  class="col-lg-6">
-            <div id="chart">
-                <apx-chart
+          <div  class="col-lg-6 py-3">
+            <div id="chart" class=" m-0 pt-2 shadow-sm border">
+              <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
                   [labels]="chartOptions.labels"
@@ -20,9 +20,9 @@
                 ></apx-chart>
               </div>
           </div>
-          <div  class="col-lg-6">
-            <div id="chart">
-                <apx-chart
+          <div  class="col-lg-6 py-3">
+            <div id="chart" class=" m-0 pt-2  shadow-sm border">
+              <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
                   [labels]="chartOptions.labels"
