--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -39,8 +39,8 @@
       <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
           <div  class="col-lg-4">
-            <div id="chart" class="mt-0">
-                <apx-chart
+            <div id="chart" class=" mt-0 py-3 shadow-sm border">
+              <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
                   [labels]="chartOptions.labels"
@@ -51,8 +51,8 @@
               </div>
           </div>
           <div  class="col-lg-4">
-            <div id="chart" class="mt-0">
-                <apx-chart
+            <div id="chart" class=" mt-0 py-3 shadow-sm border">
+              <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
                   [labels]="chartOptions.labels"
@@ -63,8 +63,8 @@
               </div>
           </div>
           <div  class="col-lg-4">
-            <div id="chart" class="mt-0">
-                <apx-chart
+            <div id="chart" class=" mt-0 py-3 shadow-sm border">
+              <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
                   [labels]="chartOptions.labels"
