--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -87,10 +87,7 @@
                                         <div class="col-lg-12">
                                             <div class="form-group kt-form__group row">
                                                 <div
-                                                    class="
-                                            col-lg-3
-                                            kt-margin-bottom-20-mobile
-                                        "
+                                                    class=" col-lg-3 kt-margin-bottom-20-mobile "
                                                 >
                                                     <mat-form-field
                                                         class="mat-form-field-fluid w-full"
@@ -475,53 +472,54 @@
                 </tr>
                 </tbody>
             </table>
-            <div
-                *ngIf="MatTableLenght"
-                class="mat-select"
-                style="padding: 5px"
-            >
-                Items per page:
-                <mat-select
-                    display="inline"
-                    [(value)]="itemsPerPage"
-                    (valueChange)="paginateAs(1, $event)"
-                    style="
-                        width: 50px;
-                        margin-left: 15px;
-                        display: inline-block;
-                        margin-right: 10px;
-                    "
-                >
-                    <mat-option [value]="10">10</mat-option>
-                    <mat-option [value]="20">20</mat-option>
-                    <mat-option [value]="40">40</mat-option>
-                    <mat-option [value]="60">60</mat-option>
-                    <mat-option [value]="80">80</mat-option>
-                </mat-select>
-                <button (click)="paginateAs(1)">
-                    First
-                </button>
-                <pagination-controls
-                    display="inline"
-                    (pageChange)="paginateAs($event)"
-                    style="display: inline-block"
-                ></pagination-controls>
-                <button
-                    (click)="
-                        paginateAs(
-                            Math.ceil(
-                                totalItems / itemsPerPage
-                            )
-                        )
-                    "
-                >
-                    Last
-                </button>
-                <p style="float: right">
-                    Total <b>{{ totalItems }}</b> items
-                </p>
-            </div>
+
         </div>
+        <div
+        *ngIf="MatTableLenght"
+        class="mat-select"
+        style="padding: 5px"
+    >
+        Items per page:
+        <mat-select
+            display="inline"
+            [(value)]="itemsPerPage"
+            (valueChange)="paginateAs(1, $event)"
+            style="
+                width: 50px;
+                margin-left: 15px;
+                display: inline-block;
+                margin-right: 10px;
+            "
+        >
+            <mat-option [value]="10">10</mat-option>
+            <mat-option [value]="20">20</mat-option>
+            <mat-option [value]="40">40</mat-option>
+            <mat-option [value]="60">60</mat-option>
+            <mat-option [value]="80">80</mat-option>
+        </mat-select>
+        <button (click)="paginateAs(1)">
+            First
+        </button>
+        <pagination-controls
+            display="inline"
+            (pageChange)="paginateAs($event)"
+            style="display: inline-block"
+        ></pagination-controls>
+        <button
+            (click)="
+                paginateAs(
+                    Math.ceil(
+                        totalItems / itemsPerPage
+                    )
+                )
+            "
+        >
+            Last
+        </button>
+        <p style="float: right">
+            Total <b>{{ totalItems }}</b> items
+        </p>
+    </div>
     </div>
 </div>
 
